--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
     <header>
         <div class="container nav-container">
             <nav class="nav">
-                <a class="nav__logo" href="index.html">WebStudio</a>
+                <a class="nav__logo" href="index.html">Ruba Sbeih</a>
                 <ul class="links">
                     <li>
-                        <a class="links__item" href="index.html">Studio</a>
+                        <a class="links__item" href="index.html">Home</a>
                     </li>
                     <li>
                         <a class="links__item current" href="portfolio.html">Portfolio</a>
@@ -32,14 +32,14 @@
                     <a class="nav-info__text" href="tel:+380961111111">
                         <svg height="16px" width="16px">
                             <use href="./images/icons/icons.svg#envelope"></use>
-                            </svg>+38 096 111 11 11</a>
+                            </svg>+972584784975</a>
                 </li>
                 <li>
 
-                    <a class="nav-info__text" href="mailto:info@devstudio.com">
+                    <a class="nav-info__text" href="mailto:rsasbeih@gmail.com">
                         <svg height="16px" width="16px">
                             <use href="./images/icons/icons.svg#smartphone"></use>
-                            </svg>info@devstudio.com
+                            </svg>mailto:rsasbeih@gmail.com
                     </a>
                 </li>
             </ul>
@@ -215,33 +215,8 @@
     </main>
     <footer class="footer">
         <div class="container footer__content">
-            <div>
-                <div>
-                    <a class="footer__logo" href="index.html">WebStudio</a>
-                </div>
-                <address>
-            <ul class="footer__list">
-                    <li>
-                   <a class="footer__address" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.6950454861217!2d-73.96736848533362!3d40.76873154208117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258ebe8836e8f%3A0xa007c44e7c4aa0eb!2s695%20Park%20Ave%2C%20New%20York%2C%20NY%2010065%2C%20USA!5e0!3m2!1sen!2sil!4v1656414974817!5m2!1sen!2sil">
-                    695 Park Ave, New York, NY 10065<br>
-                    United States</a>
-                    </li>
-                    <li>
-                    <a class="footer__info" href="mail:information@example.com">
-                info@example.com
-                     </a>
-                </li>
-                 
-                <li>
-            <a class="footer__email" href="+1 212-772-4150">
-                +1 212-772-4150
-            </a>
-                </li>
-                </ul>
-                </address>
-            </div>
             <div class="social-content">
-                <p class="social__text">Find us on</p>
+                <!-- <p class="social__text">Find us on</p> -->
                 <ul class="social__container">
                     <li class="social__item">
                         <a href="/" class="social__image">
@@ -272,23 +247,6 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-            <div class="newsletter">
-                <p class="social__text">Subscribe to the newsletter</p>
-                <div>
-                    <form class="newsletter__form">
-                        <label>
-                        <input class="newsletter__input" type="email" name="email" placeholder="Email" />
-                        </label>
-                        <div class="newsletter__container">
-                            <button class="newsletter__button" type="submit">Subscribe    
-                        <svg height="20px" width="20px">
-                            <use href="./images/icons/icons.svg#send"></use>
-                            </svg></button>
-                        </div>
-                    </form>
-
-                </div>
             </div>
         </div>
     </footer>
