--- a/index.html
+++ b/index.html
@@ -14,32 +14,29 @@
     <header>
         <div class="container nav-container">
             <nav class="nav">
-                <a class="nav__logo" href="index.html">WebStudio</a>
+                <a class="nav__logo" href="index.html">Ruba Sbeih</a>
                 <ul class="links">
                     <li>
-                        <a class="links__item current" href="index.html">Studio</a>
+                        <a class="links__item current" href="index.html">Home</a>
                     </li>
                     <li>
                         <a class="links__item" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="links__item" href="https://google.com">Contacts</a>
                     </li>
                 </ul>
             </nav>
             <ul class="nav-info">
                 <li>
-                    <a class="nav-info__text" href="tel:+380961111111">
+                    <a class="nav-info__text" href="tel:+972584784975">
                         <svg height="16px" width="16px">
                             <use href="./images/icons/icons.svg#envelope"></use>
-                            </svg>+38 096 111 11 11</a>
+                            </svg>+972584784975</a>
                 </li>
                 <li>
 
-                    <a class="nav-info__text" href="mailto:info@devstudio.com">
+                    <a class="nav-info__text" href="mailto:rsasbeih@gmail.com">
                         <svg height="16px" width="16px">
                             <use href="./images/icons/icons.svg#smartphone"></use>
-                            </svg>info@devstudio.com
+                            </svg>rsasbeih@gmail.com
                     </a>
                 </li>
             </ul>
@@ -59,7 +56,7 @@
                 <nav class="mobile-menu__navigation">
                     <ul class="mobile-menu__list list">
                         <li class="mobile-menu__item">
-                            <a class="mobile-menu__link link" href="./index.html">Studio</a>
+                            <a class="mobile-menu__link link" href="./index.html">Home</a>
                         </li>
                         <li class="mobile-menu__item">
                             <a class="mobile-menu__link link" href="./portfolio.html">Portfolio</a>
@@ -73,11 +70,11 @@
                 <div class="mobile-menu__contact">
                     <ul class="mobile-menu__contact-list list">
                         <li class="mobile-menu__contact-item">
-                            <a class="mobile-menu__phone-link link" href="tel:+380961111111">
-                  +38 096 111 11 11</a>
+                            <a class="mobile-menu__phone-link link" href="tel:+972584784975">
+                  +972584784975</a>
                         </li>
                         <li class="mobile-menu__contact-item">
-                            <a class="mobile-menu__email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                            <a class="mobile-menu__email-link link" href="mailto:rsasbeih@gmail.com">rsasbeih@gmail.com</a>
                         </li>
                     </ul>
 
@@ -104,8 +101,12 @@
     <main>
         <section class="hero">
             <div class="container hero__content">
-                <h1 class="hero__title">EFFECTIVE SOLUTIONS FOR <br> YOUR BUSINESS</h1>
-                <button class="hero__button" type="button" data-modal-open>Request Our Service</button>
+                <div class="hero__card">
+                    <h1 class="hero__title">RUBA SBEIH</h1>
+                    <hr>
+                    <h3 class="hero__description" style="margin-top: 18px;">SOFTWARE ENGINEER</h3>
+                    <h3 class="hero__description">Current Status - Looking for work</h3>
+                </div>
             </div>
         </section>
         <section class="section">
@@ -376,33 +377,8 @@
     </main>
     <footer class="footer">
         <div class="container footer__content">
-            <div>
-                <div>
-                    <a class="footer__logo" href="index.html">WebStudio</a>
-                </div>
-                <address>
-            <ul class="footer__list">
-                    <li>
-                   <a class="footer__address" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.6950454861217!2d-73.96736848533362!3d40.76873154208117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258ebe8836e8f%3A0xa007c44e7c4aa0eb!2s695%20Park%20Ave%2C%20New%20York%2C%20NY%2010065%2C%20USA!5e0!3m2!1sen!2sil!4v1656414974817!5m2!1sen!2sil">
-                    695 Park Ave, New York, NY 10065<br>
-                    United States</a>
-                    </li>
-                    <li>
-                    <a class="footer__info" href="mail:information@example.com">
-                info@example.com
-                     </a>
-                </li>
-                 
-                <li>
-            <a class="footer__email" href="+1 212-772-4150">
-                +1 212-772-4150
-            </a>
-                </li>
-                </ul>
-                </address>
-            </div>
             <div class="social-content">
-                <p class="social__text">Find us on</p>
+                <!-- <p class="social__text">Find us on</p> -->
                 <ul class="social__container">
                     <li class="social__item">
                         <a href="/" class="social__image">
@@ -433,23 +409,6 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-            <div class="newsletter">
-                <p class="social__text">Subscribe to the newsletter</p>
-                <div>
-                    <form class="newsletter__form">
-                        <label>
-                        <input class="newsletter__input" type="email" name="email" placeholder="Email" />
-                        </label>
-                        <div class="newsletter__container">
-                            <button class="newsletter__button" type="submit">Subscribe    
-                        <svg height="20px" width="20px">
-                            <use href="./images/icons/icons.svg#send"></use>
-                            </svg></button>
-                        </div>
-                    </form>
-
-                </div>
             </div>
         </div>
     </footer>
