finished about me section

--- a/index.html
+++ b/index.html
@@ -111,49 +111,50 @@
         </section>
         <section class="section">
             <div class="container">
+                <h2 class="wwd__title">ABOUT ME</h2>
                 <ul class="benefits">
                     <li class="benefits__item">
                         <div class="benefits__image">
                             <svg width="70" height="70">
-                            <use href="./images/icons/icons.svg#antenna-1"></use>
+                            <use href="./images/icons/icons.svg#language"></use>
                             </svg>
                         </div>
-                        <h3 class="benefits__title">ATTENTION TO DETAILS</h3>
+                        <h3 class="benefits__title">BILINGUAL</h3>
                         <p class="benefits__description">
-                            We go into all the details and processes of your business to develop a customized solution.
+                            I am a native speaker in both English and Arabic! Working my way to being trilingual with Hebrew!
                         </p>
                     </li>
                     <li class="benefits__item">
                         <div class="benefits__image">
                             <svg width="70" height="70">
-                            <use href="./images/icons/icons.svg#clock-1"></use>
+                            <use href="./images/icons/icons.svg#airplane"></use>
                             </svg>
                         </div>
-                        <h3 class="benefits__title">PUNCTUALITY</h3>
+                        <h3 class="benefits__title">WELL TRAVELED</h3>
                         <p class="benefits__description">
-                            With us, you can feel safe and secure., An important principle of the company: respect your time and respect the agreed deadlines.
+                            I haved lived in both eastern countries and western countries for over 10 years respectively!
                         </p>
                     </li>
                     <li class="benefits__item">
                         <div class="benefits__image">
-                            <svg width="70" height="70">
-                            <use href="./images/icons/icons.svg#diagram-1"></use>
+                            <svg width="100" height="100">
+                            <use href="./images/icons/icons.svg#birzeit"></use>
                             </svg>
                         </div>
-                        <h3 class="benefits__title">PLANNING</h3>
+                        <h3 class="benefits__title">BIRZEIT ALUMNI</h3>
                         <p class="benefits__description">
-                            You will be able to observe and participate in every phase of solution development and implementation.
+                            I graduated with a Bachelor's Degree in Computer Science from Birzeit University in the year 2020!
                         </p>
                     </li>
                     <li class="benefits__item">
                         <div class="benefits__image">
-                            <svg width="70" height="70">
-                            <use href="./images/icons/icons.svg#astronaut-1"></use>
+                            <svg width="150" height="150">
+                            <use href="./images/icons/icons.svg#manara"></use>
                             </svg>
                         </div>
-                        <h3 class="benefits__title">MODERN TECHNOLOGIES</h3>
+                        <h3 class="benefits__title">MANARA STUDENT</h3>
                         <p class="benefits__description">
-                            We use innovative tools to solve assigned tasks. It's time to simplify work processes.
+                            I was accepted into Manara's Winter 2022 cohort and am currently in training!
                         </p>
                     </li>
                 </ul>
@@ -161,7 +162,7 @@
         </section>
         <section class="section wwd_section">
             <div class="container">
-                <h2 class="wwd__title">What we do</h2>
+                <h2 class="wwd__title">RECENT PROJECTS</h2>
                 <ul class="wwd__container">
                     <li>
                         <img src="images/wwd1.jpg" alt="what we do image 1" width="370px" />
@@ -180,7 +181,7 @@
         </section>
         <section class="section our-team__section">
             <div class="container">
-                <h2 class="title">Our Team</h2>
+                <h2 class="title">CONTACT</h2>
                 <ul class="our-team">
                     <li class="our-team__card">
                         <img class="our-team__image" src="images/team/chrisw.jpg" alt="image of Chris" width="270px" />
@@ -321,55 +322,6 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <h2 class="title">Regular Customers</h2>
-                <ul class="customer__container">
-                    <li>
-                        <a href="/" class="customer__logo">
-                            <svg height="100px" width="100px">
-                            <use href="./images/icons/icons.svg#Logo-6"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" class="customer__logo">
-                            <svg height="100px" width="100px">
-                            <use href="./images/icons/icons.svg#Logo-4"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" class="customer__logo">
-                            <svg height="100px" width="100px">
-                            <use href="./images/icons/icons.svg#Logo-3"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" class="customer__logo">
-                            <svg height="100px" width="100px">
-                            <use href="./images/icons/icons.svg#Logo-2"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" class="customer__logo">
-                            <svg height="100px" width="100px">
-                            <use href="./images/icons/icons.svg#Logo"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/" class="customer__logo">
-                            <svg height="100px" width="100px">
-                            <use href="./images/icons/icons.svg#Logo-1"></use>
-                            </svg>
-                        </a>
                     </li>
                 </ul>
             </div>
