--- a/index.html
+++ b/index.html
@@ -22,20 +22,23 @@
                     <li>
                         <a class="links__item" href="portfolio.html">Portfolio</a>
                     </li>
+                    <li>
+                        <a class="links__item" href="portfolio.html">Experience</a>
+                    </li>
                 </ul>
             </nav>
             <ul class="nav-info">
                 <li>
                     <a class="nav-info__text" href="tel:+972584784975">
                         <svg height="16px" width="16px">
-                            <use href="./images/icons/icons.svg#envelope"></use>
+                            <use href="./images/icons/icons.svg#smartphone"></use>
                             </svg>+972584784975</a>
                 </li>
                 <li>
 
                     <a class="nav-info__text" href="mailto:rsasbeih@gmail.com">
                         <svg height="16px" width="16px">
-                            <use href="./images/icons/icons.svg#smartphone"></use>
+                            <use href="./images/icons/icons.svg#envelope"></use>
                             </svg>rsasbeih@gmail.com
                     </a>
                 </li>
@@ -181,149 +184,39 @@
         </section>
         <section class="section our-team__section">
             <div class="container">
-                <h2 class="title">CONTACT</h2>
-                <ul class="our-team">
-                    <li class="our-team__card">
-                        <img class="our-team__image" src="images/team/chrisw.jpg" alt="image of Chris" width="270px" />
-                        <h3 class="our-team__name">Christopher Walker</h3>
-                        <p class="our-team__title">Product Designer</p>
-                        <ul class="our-team__social">
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#instagram"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#twitter"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#facebook"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#linkedin-1"></use>
-                            </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="our-team__card">
-                        <img class="our-team__image" src="images/team/kyliee.jpg" alt="image of Kylie" width="270px" />
-                        <h3 class="our-team__name">Kylie Evans</h3>
-                        <p class="our-team__title">Frontend Developer</p>
-                        <ul class="our-team__social">
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#instagram"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#twitter"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#facebook"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#linkedin-1"></use>
-                            </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="our-team__card">
-                        <img class="our-team__image" src="images/team/ryanh.jpg" alt="image of Ryan" width="270px" />
-                        <h3 class="our-team__name">Ryan Harris</h3>
-                        <p class="our-team__title">Marketing</p>
-                        <ul class="our-team__social">
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#instagram"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#twitter"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#facebook"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#linkedin-1"></use>
-                            </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="our-team__card">
-                        <img class="our-team__image" src="images/team/tylerm.jpg" alt="image of Tyler" width="270px" />
-                        <h3 class="our-team__name">Tyler Moore</h3>
-                        <p class="our-team__title">UI Designer</p>
-                        <ul class="our-team__social">
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#instagram"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#twitter"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#facebook"></use>
-                            </svg>
-                                </a>
-                            </li>
-                            <li class="our-team__item">
-                                <a href="/" class="our-team__link">
-                                    <svg width="20px" height="20px">
-                            <use href="./images/icons/icons.svg#linkedin-1"></use>
-                            </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+                <h2 class="title title--no-margin">CONTACT</h2>
+                <div class="modal">
+            </button>
+                    <h2 class="modal__name">Leave your information and I'll get back to you!</h2>
+                    <form class="service">
+                        <label class="service__label">
+                         <span class="service__name">Name</span>
+                          <input class="service__input" type="text" name="name" placeholder=" "/>
+                          <svg class="service__icon" width="18" height="18">
+                           <use href="./images/icons/icons.svg#person"></use>
+                              </svg>
+                    </label>
+                        <label class="service__label">
+                         <span class="service__name">Telephone</span>
+                          <input class="service__input" type="tel" name="telephone" placeholder=" "/>
+                          <svg class="service__icon" width="18" height="18">
+                           <use href="./images/icons/icons.svg#phone"></use>
+                              </svg>
+                    </label>
+                        <label class="service__label">
+                          <span class="service__name">Email</span>
+                         <input class="service__input" type="email" name="email" placeholder=" "/>
+                          <svg class="service__icon" width="18" height="18">
+                           <use href="./images/icons/icons.svg#email"></use>
+                              </svg>
+                     </label>
+                        <label class="service__label textarea">
+                          <span class="service__name">Comments</span>
+                         <textarea  class="service__textarea" name="comments" rows="8" placeholder="Enter the text"></textarea>
+                    </label>
+                        <button class="service__button" type="submit">Send</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
@@ -333,7 +226,7 @@
                 <!-- <p class="social__text">Find us on</p> -->
                 <ul class="social__container">
                     <li class="social__item">
-                        <a href="/" class="social__image">
+                        <a href="https://www.instagram.com/ruba.exe/" class="social__image">
                             <svg height="20px" width="20px">
                             <use href="./images/icons/icons.svg#instagram"></use>
                             </svg>
@@ -347,14 +240,14 @@
                         </a>
                     </li>
                     <li class="social__item">
-                        <a href="/" class="social__image">
+                        <a href="https://www.facebook.com/rubasbeih123/" class="social__image">
                             <svg height="20px" width="20px">
                             <use href="./images/icons/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social__item">
-                        <a href="/" class="social__image">
+                        <a href="https://www.linkedin.com/in/ruba-sbeih-27223817a/" class="social__image">
                             <svg height="20px" width="20px">
                             <use href="./images/icons/icons.svg#linkedin-1"></use>
                             </svg>
