added job and portfolio tabs

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,9 @@
                         <a class="links__item" href="index.html">Home</a>
                     </li>
                     <li>
+                        <a class="links__item" href="experience.html">Experience</a>
+                    </li>
+                    <li>
                         <a class="links__item current" href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
@@ -36,7 +39,7 @@
                     <a class="nav-info__text" href="mailto:rsasbeih@gmail.com">
                         <svg height="16px" width="16px">
                             <use href="./images/icons/icons.svg#smartphone"></use>
-                            </svg>mailto:rsasbeih@gmail.com
+                            </svg>rsasbeih@gmail.com
                     </a>
                 </li>
             </ul>
