--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                         <a class="links__item current" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a class="links__item" href="portfolio.html">Portfolio</a>
+                        <a class="links__item" href="experience.html">Experience</a>
                     </li>
                     <li>
-                        <a class="links__item" href="portfolio.html">Experience</a>
+                        <a class="links__item" href="portfolio.html">Portfolio</a>
                     </li>
                 </ul>
             </nav>
@@ -109,6 +109,7 @@
                     <hr>
                     <h3 class="hero__description" style="margin-top: 18px;">SOFTWARE ENGINEER</h3>
                     <h3 class="hero__description">Current Status - Looking for work</h3>
+                    <h6 style="color:white">(This website is currently a work in progress)</h6>
                 </div>
             </div>
         </section>
@@ -135,7 +136,7 @@
                         </div>
                         <h3 class="benefits__title">WELL TRAVELED</h3>
                         <p class="benefits__description">
-                            I haved lived in both eastern countries and western countries for over 10 years respectively!
+                            I haved lived in both in the US and Jerusalem for over 10 years respectively!
                         </p>
                     </li>
                     <li class="benefits__item">
@@ -186,7 +187,7 @@
             <div class="container">
                 <h2 class="title title--no-margin">CONTACT</h2>
                 <div class="modal">
-            </button>
+                    </button>
                     <h2 class="modal__name">Leave your information and I'll get back to you!</h2>
                     <form class="service">
                         <label class="service__label">
