--- a/experience.html
+++ b/experience.html
@@ -8,6 +8,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 
 <body>
@@ -52,15 +53,15 @@
                 <ul class="job">
                     <li class="job__card">
                         <p class="job__heading">
-                            <span>WordPress Developer (Intern)
+                            <span>Frontend Developer (Intern)
                             <svg height="18px" width="18px">
-                            <use href="./images/icons/icons.svg#wordpress"></use>
+                            <use href="./images/icons/icons.svg#wordpress2"></use>
                             </svg>
                             <svg height="18px" width="18px">
-                            <use href="./images/icons/icons.svg#google"></use>
+                            <use href="./images/icons/icons.svg#html2"></use>
                             </svg>
-                            <svg height="18px" width="18px">
-                            <use href="./images/icons/icons.svg#javascript"></use>
+                            <svg height="20px" width="20px">
+                            <use href="./images/icons/icons.svg#php"></use>
                             </svg>
                            </span>
                             <span>
@@ -77,6 +78,123 @@
                             <li class="job__point">Increased the potential and opportunities for students and professors to collaborate on data science projects </li>
                             <li class="job__point">Worked independently without direct supervision and consistently met weekly deadlines</li>
                         </ul>
+                        <p class="job__website">
+                            <a class="job__link" href="https://cidr.huji.ac.il/en/">www.cidr.huji.ac.il</a>
+                        </p>
+                    </li>
+                    <li class="job__card">
+                        <p class="job__heading">
+                            <span>Frontend Developer (Intern)
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#angularjs"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#javascript2"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#html2"></use>
+                            </svg>
+                           </span>
+                            <span>
+                            Feb 2022 - Apr 2022
+                            </span>
+                        </p>
+                        <p class="job__subheading">
+                            <span>accessibleGo</span>
+                            <span>Jerusalem, Israel</span>
+                        </p>
+                        <ul class="job__description">
+                            <li class="job__point">Integrated Google Map API to support accessibility</li>
+                            <li class="job__point">Balanced work commitments as well as school commitments through time management </li>
+                        </ul>
+                        <p class="job__website">
+                            <a class="job__link" href="https://accessiblego.com/home">www.accessiblego.com</a>
+                        </p>
+                    </li>
+                    <li class="job__card">
+                        <p class="job__heading">
+                            <span>Quality Assurance Engineer & Software Engineer
+                            <svg height="30px" width="30px">
+                            <use href="./images/icons/icons.svg#java"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#python"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#springboot"></use>
+                            </svg>
+                           </span>
+                            <span>
+                            April 2020 - May 2021
+                            </span>
+                        </p>
+                        <p class="job__subheading">
+                            <span>Nokia</span>
+                            <span>Ramallah, West Bank</span>
+                        </p>
+                        <ul class="job__description">
+                            <li class="job__point">Designed and developed new backend features for Nokia 5G clients using Java and Springboot</li>
+                            <li class="job__point">Lead and performed weekly demos for products owners</li>
+                            <li class="job__point">Utilized Agile methodologies such as daily scrum meetings, leading to a faster development lifecycle </li>
+                            <li class="job__point">Worked independently to create test campaigns and test cases using ROBOT</li>
+                            <li class="job__point">Reduced bugs and advocated good code practices through peer review</li>
+                            <li class="job__point">Worked in a new team every PI to quickly design and implement new features, as well as transfer knowledge</li>
+                            <li class="job__point">Wrote technical feature documentation</li>
+                            <li class="job__point">Trained and oversaw new interns on best QA practices and tools</li>
+                            <li class="job__point">Performed debugging and manual quality assurance to quickly eliminate new bugs</li>
+                        </ul>
+                        <p class="job__website">
+                            <a class="job__link" href="https://www.nokia.com/">www.nokia.com</a>
+                        </p>
+                    </li>
+                    <li class="job__card">
+                        <p class="job__heading">
+                            <span>Full Stack Developer 
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#wordpress"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#google"></use>
+                            </svg>
+                           </span>
+                            <span>
+                            Feb 2020 - Apr 2020
+                            </span>
+                        </p>
+                        <p class="job__subheading">
+                            <span>PharmaWebSolutions</span>
+                            <span>Remote</span>
+                        </p>
+                        <ul class="job__description">
+                            <li class="job__point">Designed and developed a prescription assistance web application using Angular and NodeJS</li>
+                            <li class="job__point">Facilitated web application deployment using GoDaddy </li>
+                        </ul>
+                    </li>
+                    <li class="job__card">
+                        <p class="job__heading">
+                            <span>Full Stack Developer (Intern)
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#wordpress"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#google"></use>
+                            </svg>
+                           </span>
+                            <span>
+                            Jan 2019 - Aug 2019
+                            </span>
+                        </p>
+                        <p class="job__subheading">
+                            <span>iConnect Technologies</span>
+                            <span>Ramallah, West Bank</span>
+                        </p>
+                        <ul class="job__description">
+                            <li class="job__point">Designed and developed an alert generator web app using ASP.NET and Angular</li>
+                            <li class="job__point">Directed intern team and spearheaded daily discussions with internship team leader </li>
+                        </ul>
+                        <p class="job__website">
+                            <a class="job__link" href="https://www.iconnect-tech.com/Home/Contact">www.iconnect-tech.com</a>
+                        </p>
                     </li>
                 </ul>
             </div>
