Added technologies to experience

--- a/experience.html
+++ b/experience.html
@@ -63,6 +63,9 @@
                             <svg height="20px" width="20px">
                             <use href="./images/icons/icons.svg#php"></use>
                             </svg>
+                            <svg height="20px" width="20px">
+                            <use href="./images/icons/icons.svg#figma"></use>
+                            </svg>
                            </span>
                             <span>
                             June 2022 - July 2022
@@ -94,6 +97,12 @@
                             <svg height="18px" width="18px">
                             <use href="./images/icons/icons.svg#html2"></use>
                             </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#css"></use>
+                            </svg>
+                            <svg height="20px" width="20px">
+                            <use href="./images/icons/icons.svg#figma"></use>
+                            </svg>
                            </span>
                             <span>
                             Feb 2022 - Apr 2022
@@ -123,6 +132,9 @@
                             <svg height="18px" width="18px">
                             <use href="./images/icons/icons.svg#springboot"></use>
                             </svg>
+                            <svg height="20px" width="20px">
+                            <use href="./images/icons/icons.svg#linux"></use>
+                            </svg>
                            </span>
                             <span>
                             April 2020 - May 2021
@@ -151,10 +163,19 @@
                         <p class="job__heading">
                             <span>Full Stack Developer 
                             <svg height="18px" width="18px">
-                            <use href="./images/icons/icons.svg#wordpress"></use>
+                            <use href="./images/icons/icons.svg#angularjs"></use>
                             </svg>
                             <svg height="18px" width="18px">
-                            <use href="./images/icons/icons.svg#google"></use>
+                            <use href="./images/icons/icons.svg#javascript2"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#html2"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#nodejs"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#css"></use>
                             </svg>
                            </span>
                             <span>
@@ -169,15 +190,27 @@
                             <li class="job__point">Designed and developed a prescription assistance web application using Angular and NodeJS</li>
                             <li class="job__point">Facilitated web application deployment using GoDaddy </li>
                         </ul>
+                        <p class="job__website">
+                            <a class="job__link" href="http://www.pharmawebsolutions.com/">www.pharmwebsolutions.com</a>
+                        </p>
                     </li>
                     <li class="job__card">
                         <p class="job__heading">
                             <span>Full Stack Developer (Intern)
                             <svg height="18px" width="18px">
-                            <use href="./images/icons/icons.svg#wordpress"></use>
+                            <use href="./images/icons/icons.svg#angularjs"></use>
                             </svg>
                             <svg height="18px" width="18px">
-                            <use href="./images/icons/icons.svg#google"></use>
+                            <use href="./images/icons/icons.svg#xd"></use>
+                            </svg>
+                            <svg height="18px" width="18px">
+                            <use href="./images/icons/icons.svg#css"></use>
+                            </svg>
+                            <svg height="20px" width="20px">
+                            <use href="./images/icons/icons.svg#dotnet"></use>
+                            </svg>
+                            <svg height="20px" width="20px">
+                            <use href="./images/icons/icons.svg#csharp"></use>
                             </svg>
                            </span>
                             <span>
